--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "kartik-v/yii2-widgets": "*",
-        "2amigos/yii2-qrcode-helper": "~1.0"
+        "2amigos/yii2-qrcode-helper": "~1.0",
+        "yii2mod/yii2-cart": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
