actualizacion de carrito de compra

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "kartik-v/yii2-widgets": "*",
         "2amigos/yii2-qrcode-helper": "~1.0",
         "yii2mod/yii2-cart": "*",
-        "paypal/rest-api-sdk-php": "*"
+        "paypal/rest-api-sdk-php": "*",
+        "kartik-v/yii2-grid": "@dev",
+        "yiisoft/yii2-imagine": "~2.0.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
