--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,11 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "fxp/composer-asset-plugin":"^1.3.1",
         "php": ">=5.4.0",
+        "ext-gd": "*",
+        "ext-imagick": "*",
+        "ext-gmagick": "*",
+        "fxp/composer-asset-plugin":"^1.3.1",
         "yiisoft/yii2": ">=2.0.5",
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
